<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >
    
    <TextView
	       android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
					android:gravity="center"					        			        					       	        
	        android:text="@string/app_name2"			
	        android:textColor="@color/light_font3"		        
	        android:textSize="24sp"
	        android:textStyle="bold"	      
	        android:layout_weight="0.5"  
	        >
		</TextView>
       	     
    <ImageView        
        android:contentDescription="@string/app_name"
        android:id="@+id/imgLogo"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:gravity="center"
        android:layout_weight="1.5"
        android:src="@drawable/msa_intro" />
        
    
    <LinearLayout     
    android:id="@+id/panelMainMenu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    android:layout_marginTop="30dp"
    android:orientation="vertical"                 
    >    
       <TextView
       android:layout_width="fill_parent"
        android:layout_height="wrap_content"
				android:gravity="center"					        			        					       	        
        android:text="@string/sPleaseWait"			
        android:textColor="@color/light_font3"		        
        android:textSize="18sp"
        android:textStyle="bold"	      	         
        >
        </TextView>
   
       <TextView
        android:id="@+id/lblTimer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
				android:gravity="center"									        			        					       	        
        android:text="99"			
        android:textColor="@color/YellowColor"		        
        android:textSize="18sp"
        android:textStyle="bold"	      	         
        >
			</TextView>
			
       <Button
	        android:id="@+id/btnCancel"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:textSize="20sp"			        
	        android:text="@string/sCancel"			        
	        />
   
		</LinearLayout>
    
</LinearLayout>